--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,161 @@
-.App {
+@import url('https://fonts.googleapis.com/css2?family=Squada+One&display=swap');
+
+*{
+  box-sizing: border-box;
+}
+
+body {
+  background-image: 'url(https://c4.wallpaperflare.com/wallpaper/386/905/194/shades-tones-dark-wallpaper-preview.jpg)';
+
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+
+  min-height: 100vh;
+  font-family: 'squada', sans-serif;
+  margin: 0;
+}
+
+#root {
+  width: 100%;
+}
+
+h1 {
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.timeline-container {
+  background-color: #fff;
   display: flex;
   flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  position: relative;
+  margin: 40px 0;
 }
 
-.App-link {
-  color: #61dafb;
+.timeline-container::after {
+
+  background-color: #fff;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.timeline-container::after {
+  background-color: yellow;
+  content: '';
+  position: absolute;
+  left: calc(50% - 2px);
+  width: 4px;
+  height: 100%;
+}
+
+.timeline-item {
+  display: flex;
+  justify-content: flex-end;
+  padding-right: 30px;
+  margin: 10px 0;
+  width: 50%;
+}
+
+.timeline-item:nth-child(odd) {
+  align-self: flex-end;
+  justify-content: flex-start;
+  padding-right: 0px;
+  padding-left: 30px;
+}
+
+.timeline-item-content {
+  background-color: white;
+  border-radius: 5px;
+  box-shadow: 0 0 5px gray;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-end;
+  padding: 15px;
+  max-width: 65%;
+  width: 400px;
+  text-align: right;
+}
+.timeline-item-content::after {
+content: '';
+background-color: rgb(255, 255, 255);
+box-shadow: 1px -1px 1px rgb(0, 0, 0);
+position: absolute;
+transform: rotate(45deg);
+right: -7.5px;
+top: calc(50% - 7.5px);
+width: 15px;
+height: 15px;
+}
+
+.timeline-item:nth-child(odd) .timeline-item-content {
+  align-items: flex-start;
+  text-align: left;
+}
+
+.timeline-item:nth-child(odd) .timeline-item-content::after {
+  box-shadow: -1px 1px 1px black;
+  right: auto;
+  left: -7.5px;
+}
+
+.timeline-item-content .tag {
+
+  color: #fff;
+  font-size: 12px;
+  font-weight: bold;
+  padding: 5px;
+  position: absolute;
+  letter-spacing: 1px;
+  top: 5px;
+  left: 5px;
+  text-transform: uppercase;
+}
+
+.timeline-item:nth-child(odd) .timeline-item-content .tag {
+  left: auto;
+  right: 5px;
+}
+
+.timeline-item-content .time {
+  color: #777;
+  font-size: 12px;
+}
+
+.timeline-item-content p {
+
+  font-size: 16px;
+  line-height: 24px;
+  margin: 15px 0;
+  max-width: 250px;
+}
+
+.timeline-item-content a {
+
+  color: #333;
+  text-decoration: none;
+  font-size: 14px;
+}
+
+.timeline-item-content a::after {
+
+  content: '';
+  font-size: 12px;
+}
+
+.timeline-item-content .circle {
+
+  background-color: rgb(7, 7, 7);
+  border: 3px solid rgb(0, 0, 0);
+  border-radius: 50%;
+  position: absolute;
+  top: calc(50% -10px);
+  right: -40px;
+  width: 20px;
+  height: 20px;
+  z-index: 100;
+
+}
+
+.timeline-item:nth-child(odd) .timeline-item-content .circle {
+  right: auto;
+  left: -40px;
 }
